Issue #2647006 by mark.labrecque, bisonbleu, leahtard: System messages with long strings unduly stretch the container on mobiles

--- a/sass/components/messages.sass
+++ b/sass/components/messages.sass
@@ -7,6 +7,7 @@
   color: darken($light-gray, 30%)
   background-color: $light-gray
   border: 1px solid darken($light-gray, 10%)
+  word-wrap: break-word
   pre
     border: 0
 
